k8s/modern-linux/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitops-lab
  labels:
    app.kubernetes.io/part-of: gitops-lab
