k8s/modern-linux/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-modern-linux
  namespace: gitops-lab
  labels:
    app: app-modern-linux
spec:
  type: NodePort
  selector:
    app: app-modern-linux
  ports:
    - name: http
      port: 80          # ClusterIP port
      targetPort: http  # -> container 8080
      nodePort: 30080   # reachable at http://<node-ip>:30080
